@@ -24,6 +24,7 @@ import uk.gov.hmcts.reform.hmc.TestIdamConfiguration;
 import uk.gov.hmcts.reform.hmc.config.SecurityConfiguration;
 import uk.gov.hmcts.reform.hmc.config.UrlManager;
 import uk.gov.hmcts.reform.hmc.data.SecurityUtils;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.HearingStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.PutHearingStatus;
 import uk.gov.hmcts.reform.hmc.model.CaseDetails;
 import uk.gov.hmcts.reform.hmc.model.DeleteHearingRequest;
@@ -41,8 +42,7 @@ import uk.gov.hmcts.reform.hmc.utils.TestingUtil;
 
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.doReturn;
@@ -99,7 +99,6 @@ class HearingManagementControllerTest {
         hearingStatusAuditService.saveAuditTriageDetailsWithCreatedDate(any(),any(),any(),any(),any(),any(),any());
         hearingStatusAuditService.saveAuditTriageDetailsWithUpdatedDate(any(),any(),any(),any(),any(),any(),any());
     }
-
 
     @Nested
     @DisplayName("saveHearing")
@@ -266,8 +265,8 @@ class HearingManagementControllerTest {
                                                                                      applicationParams,securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, null);
             verify(hearingManagementService, times(1)).getHearings(any(), any());
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
@@ -286,9 +285,9 @@ class HearingManagementControllerTest {
                                                                                      applicationParams, securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, null);
             verify(hearingManagementService, times(1)).getHearings(validCaseRef, "LISTED");
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertEquals("LISTED", hearingRequest.getCaseHearings().get(0).getHmcStatus());
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHmcStatus()).isEqualTo("LISTED");
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
@@ -303,8 +302,8 @@ class HearingManagementControllerTest {
                                                                                      applicationParams, securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, status);
             verify(hearingManagementService, times(1)).getEmptyHearingsResponse(validCaseRef);
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
     }
 
@@ -372,7 +371,8 @@ class HearingManagementControllerTest {
         @Test
         void shouldReturnHearingResponseForListed() {
             List<String> ccdCaseRefs  = List.of("9372710950276233");
-            doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRefs.get(0), "LISTED"))
+            doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRefs.getFirst(),
+                                                                      HearingStatus.LISTED.name()))
                 .when(hearingManagementService)
                 .getHearings(any(), any());
             HearingManagementController controller = new HearingManagementController(
@@ -382,8 +382,8 @@ class HearingManagementControllerTest {
             );
             List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs, null);
             verify(hearingManagementService, times(1)).getHearings(any(), any());
-            assertEquals(hearingsResponseList.get(0).getCaseRef(), ccdCaseRefs.get(0));
-            assertTrue(hearingsResponseList.get(0).getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingsResponseList.getFirst().getCaseRef()).isEqualTo(ccdCaseRefs.getFirst());
+            assertThat(hearingsResponseList.getFirst().getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
@@ -401,8 +401,8 @@ class HearingManagementControllerTest {
             );
             List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs, null);
             verify(hearingManagementService, times(2)).getHearings(any(), any());
-            assertEquals(hearingsResponseList.get(0).getCaseRef(), ccdCaseRefs.get(1));
-            assertTrue(hearingsResponseList.get(0).getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingsResponseList.getFirst().getCaseRef()).isEqualTo(ccdCaseRefs.get(1));
+            assertThat(hearingsResponseList.getFirst().getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
     }
 
